--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2000-01-11  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* configure.in: Fix a message.
+
 2000-01-11  Ryuji Abe  <raeva@t3.rim.or.jp>
 
 	* nmz/util.h: Added prefix macro difinitions.
