--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2000-01-12  NOKUBI Takatsugu  <knok@daionet.gr.jp>
+
+	* scripts/mknmz.pl.in (load_modules): Modified to call textdomain().
+
+	* pl/gettext.pl.in (mo_format_value): Modified to use private 
+	variables.
+
 2000-01-12  Ryuji Abe  <raeva@t3.rim.or.jp>
 
 	* configure.in(AC_CHECK_FUNCS): Checking for __vsnprintf.
