--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2000-01-13  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
+	* configure.in: Abolish --with-scoring option.
+
 	* nmz/hlist.c (nmz_get_hlist): Modify the way to handle tfidf.
 
 	* nmz/search.c (nmz_do_searching): Abolish tfidf handling in the func.
