--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2000-01-14  Ryuji Abe  <raeva@t3.rim.or.jp>
+
+	* lib/Makefile.am (EXTRA_DIST): Added forgotten easy-vsnprintf.c.
+
+	[Removed unnessesary includes, here is the list.]
+
+	* nmz/field.c: src/result.h.
+
+	* nmz/libnamazu.c: lib/getopt.h, src/cgi.h, src/form.h, src/output.h,
+	and src/usage.h.
+
+	* nmz/search.c: src/output.h and src/result.h.
+
+	* nmz/wakati.c: src/message.h and src/output.h.
+
 2000-01-13  Kenji Suzuki  <kenji@po.ganseki.ne.jp>
 
         * filter/hnf.pl: New file.
@@ -43,8 +58,6 @@
 	* configure.in(AC_CHECK_FUNCS): Checking for __vsnprintf.
 
 	* lib/easy-vsnprintf: Derived from gnome-libs support file.
-
-	* lib/Makefile.am (EXTRA_DIST): Added easy-vsnprintf.c
 
 	* nmz/util.h: Removed HAVE__VSNPRINTF conditional.
 
