--- a/po/ja.po
+++ b/po/ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 2000-01-09 22:02+0900\n"
+"POT-Creation-Date: 2000-01-14 13:41+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -13,12 +13,12 @@ msgstr ""
 "Content-Type: text/plain; charset=EUC-JP\n"
 "Content-Transfer-Encoding: 8-bit\n"
 
-#: nmz/rcfile.c:449
+#: nmz/rcfile.c:576
 #, c-format
 msgid "Config:  %s\n"
 msgstr "設定ファイル:  %s\n"
 
-#: nmz/rcfile.c:452
+#: nmz/rcfile.c:579
 #, c-format
 msgid ""
 "Default: %s\n"
@@ -218,6 +218,292 @@ msgstr "使い方: namazu [オプション] <検索式> [インデックス]...\n"
 #: src/usage.c:92
 msgid "Try `namazu --help' for more information.\n"
 msgstr "`namazu --help' でより詳しい情報が表示されます\n"
+
+#: scripts/mknmz.pl.in:104
+msgid "target file: "
+msgstr "対象ファイル: "
+
+#: scripts/mknmz.pl.in:146
+msgid "Reading rcfile: "
+msgstr "rc ファイルの読み込み中: "
+
+#: scripts/mknmz.pl.in:180
+msgid "Checkpoint reached: re-exec mknmz...\n"
+msgstr "チェックポイントに到達しました。mknmz を再実行します...\n"
+
+#: scripts/mknmz.pl.in:313
+msgid "after load_document: "
+msgstr "load_document 実行後: "
+
+#: scripts/mknmz.pl.in:607
+msgid "Detected type: "
+msgstr "検出されたタイプ: "
+
+#: scripts/mknmz.pl.in:609 scripts/mknmz.pl.in:1111
+msgid "Unsupported data type "
+msgstr "未サポートのデータタイプ "
+
+#: scripts/mknmz.pl.in:613
+msgid "Using "
+msgstr "以下のモジュールを使用 "
+
+#: scripts/mknmz.pl.in:615
+msgid "unable to require "
+msgstr "以下のモジュールが require できません "
+
+#: scripts/mknmz.pl.in:623
+msgid "Faild to call "
+msgstr "呼び出しに失敗 "
+
+#: scripts/mknmz.pl.in:665 scripts/mknmz.pl.in:1275
+msgid "No files to index.\n"
+msgstr "インデックスすべきファイルはありません。\n"
+
+#: scripts/mknmz.pl.in:685
+msgid "code conversion: using NKF module\n"
+msgstr "コード変換に NKF モジュールを用います。\n"
+
+#: scripts/mknmz.pl.in:690
+msgid "wakati: using Text::Kakasi module\n"
+msgstr "わかち書きに Text::Kakasi モジュールを用います。\n"
+
+#: scripts/mknmz.pl.in:695
+msgid "wakati: using Text::ChaSen module\n"
+msgstr "わかち書きに Text::ChaSen モジュールを用います。\n"
+
+#: scripts/mknmz.pl.in:709
+msgid ""
+"found. Maybe this index is being updated by another process now.\n"
+"If not, you can remove this file.\n"
+msgstr ""
+"ファイルを発見しました。\n"
+"このインデックスは他のプロセスによって更新されている可能性があります。\n"
+"そうでなければ、このファイルを削除して下さい。\n"
+
+#: scripts/mknmz.pl.in:738
+msgid "Present index is old type. it's unsupported.\n"
+msgstr ""
+"すでに存在するインデックスは古い形式のものです。今はサポートされていません。"
+"\n"
+
+#: scripts/mknmz.pl.in:888
+msgid "Inherited argv: "
+msgstr "継承された引数 (argv): "
+
+#: scripts/mknmz.pl.in:892
+msgid "Inherited cwd: "
+msgstr "継承されたカレントディレクトリ (cwd): "
+
+#: scripts/mknmz.pl.in:933
+msgid "Loaded: "
+msgstr "読み込み完了: "
+
+#: scripts/mknmz.pl.in:948
+#, fuzzy
+msgid "Invalid replace: "
+msgstr "不正な replace 指定: "
+
+#: scripts/mknmz.pl.in:950
+msgid "Replace: "
+msgstr "Replace: "
+
+#: scripts/mknmz.pl.in:959
+msgid "invalid output directory\n"
+msgstr "無効な出力ディレクトリ指定\n"
+
+#: scripts/mknmz.pl.in:1048
+msgid " findfiles starting: "
+msgstr " findfiles 開始: "
+
+#: scripts/mknmz.pl.in:1066
+msgid " findfiles    ended: "
+msgstr " findfiles 終了: "
+
+#: scripts/mknmz.pl.in:1067
+#, c-format
+msgid ""
+" find_target: Scanned : (%d), Files: (%d), Elapsed: (%d), Files/sec: "
+"(%.1f).\n"
+msgstr ""
+" find_target: Scanned : (%d), Files: (%d), Elapsed: (%d), Files/sec: "
+"(%.1f).\n"
+
+#: scripts/mknmz.pl.in:1076
+msgid "lang: "
+msgstr "言語: "
+
+#: scripts/mknmz.pl.in:1104
+msgid "is 0 size! skipped."
+msgstr "ファイルサイズが 0 なのでスキップします。"
+
+#: scripts/mknmz.pl.in:1106
+msgid "may be a BINARY file! skipped."
+msgstr "ファイルがバイナリと思われるのでスキップします。"
+
+#: scripts/mknmz.pl.in:1108
+msgid "is too LARGE a text! skipped."
+msgstr "ファイルが巨大なのでスキップします。"
+
+#: scripts/mknmz.pl.in:1111
+msgid " skipped."
+msgstr " スキップします。"
+
+#: scripts/mknmz.pl.in:1116
+#, fuzzy
+msgid "system error occurred! "
+msgstr "致命的なエラー"
+
+#: scripts/mknmz.pl.in:1253
+msgid "wanted: "
+msgstr "wanted: "
+
+#: scripts/mknmz.pl.in:1347
+msgid ""
+"\n"
+"\n"
+"== found ==\n"
+msgstr ""
+"\n"
+"\n"
+"== found ==\n"
+
+#: scripts/mknmz.pl.in:1348
+msgid ""
+"\n"
+"\n"
+"== registered ==\n"
+msgstr ""
+"\n"
+"\n"
+"== registered ==\n"
+
+#: scripts/mknmz.pl.in:1349
+msgid ""
+"\n"
+"\n"
+"== overlapped  ==\n"
+msgstr ""
+"\n"
+"\n"
+"== overlapped  ==\n"
+
+#: scripts/mknmz.pl.in:1350
+msgid ""
+"\n"
+"\n"
+"== deleted  ==\n"
+msgstr ""
+"\n"
+"\n"
+"== deleted  ==\n"
+
+#: scripts/mknmz.pl.in:1351
+msgid ""
+"\n"
+"\n"
+"== updated ==\n"
+msgstr ""
+"\n"
+"\n"
+"== updated ==\n"
+
+#: scripts/mknmz.pl.in:1352
+msgid ""
+"\n"
+"\n"
+"== files to index ==\n"
+msgstr ""
+"\n"
+"\n"
+"== files to index ==\n"
+
+#: scripts/mknmz.pl.in:1376
+msgid "## deleted: "
+msgstr "## deleted: "
+
+#: scripts/mknmz.pl.in:1399
+msgid "## indexed: "
+msgstr "## indexed: "
+
+#: scripts/mknmz.pl.in:1425
+#, fuzzy
+msgid "update_field_index: "
+msgstr "フィールド検索用のインデックスが開けませんでした"
+
+#: scripts/mknmz.pl.in:1445
+msgid "was updated!\n"
+msgstr "ファイルは更新されています。\n"
+
+#: scripts/mknmz.pl.in:1486
+msgid "ERROR: malformed NMZ.r format!\n"
+msgstr "エラー: NMZ.r が無効な形式です。\n"
+
+#: scripts/mknmz.pl.in:1694
+msgid "doing write_phrase_hash() processing.\n"
+msgstr "write_phrase_hash() 実行.\n"
+
+#: scripts/mknmz.pl.in:1921
+msgid "doing write_index() processing.\n"
+msgstr "write_index() 実行.\n"
+
+#: pl/util.pl:52
+#, fuzzy
+msgid "Renamed: "
+msgstr "Renamed: "
+
+#: pl/util.pl:128 pl/util.pl:153
+msgid "not an IO::File/FileHandle object!\n"
+msgstr "IO::File/FileHandle オブジェクトではありません。\n"
+
+#: pl/util.pl:218
+msgid "Remove tmporary files:"
+msgstr "一時ファイルを削除:"
+
+#: pl/util.pl:236
+msgid "ASSERTION ERROR!: "
+msgstr "ASSERTION ERROR!: "
+
+#: pl/wakati.pl:59
+msgid "-- wakatized content --\n"
+msgstr "-- wakatized content --\n"
+
+#: pl/wakati.pl:74
+msgid "invalid wakati module: "
+msgstr "無効なわかち書きモジュール: "
+
+#: pl/wakati.pl:76
+msgid "-- wakatized bare content --\n"
+msgstr "-- wakatized bare content --\n"
+
+#: pl/wakati.pl:80
+msgid "wakati: using "
+msgstr "wakati: 以下を利用 "
+
+#: pl/find.pl:42
+msgid "Can't stat "
+msgstr ""
+
+#: pl/find.pl:53
+#, fuzzy
+msgid "Can't cd to "
+msgstr "以下のディレクトリに移動できません "
+
+#: pl/find.pl:87
+msgid "is exclude because of .htaccess\n"
+msgstr " は .htaccess によって除外されます。\n"
+
+#: pl/find.pl:95
+msgid "Can't open "
+msgstr "以下のファイルがオープンできません: "
+
+#: pl/find.pl:128
+msgid "Looped symbolic link detected "
+msgstr "循環しているシンボリックリンクを発見 "
+
+#: pl/find.pl:128
+#, fuzzy
+msgid " skipped.\n"
+msgstr " スキップします。"
 
 #~ msgid ""
 #~ "\t<h2>Error!</h2>\n"
