--- a/po/ja_JP.SJIS.po
+++ b/po/ja_JP.SJIS.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 2000-01-09 22:02+0900\n"
+"POT-Creation-Date: 2000-01-14 13:41+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -13,12 +13,12 @@ msgstr ""
 "Content-Type: text/plain; charset=Shift_JIS\n"
 "Content-Transfer-Encoding: 8-bit\n"
 
-#: nmz/rcfile.c:449
+#: nmz/rcfile.c:576
 #, c-format
 msgid "Config:  %s\n"
 msgstr "\220\335\222\350\203\164\203\100\203\103\203\213:  %s\n"
 
-#: nmz/rcfile.c:452
+#: nmz/rcfile.c:579
 #, c-format
 msgid ""
 "Default: %s\n"
@@ -39,7 +39,7 @@ msgstr "\222\166\226\275\223\111\202\310\203\107\203\211\201\133"
 
 #: nmz/util.c:565
 msgid "Invalid query"
-msgstr "\225\163\220\263\202\310 idxname \202\314\216\167\222\350\202\305\202\267"
+msgstr "\225\163\220\263\202\310\214\237\215\365\216\256\202\305\202\267"
 
 #: nmz/util.c:568
 #, fuzzy
@@ -218,6 +218,292 @@ msgstr "\216\147\202\242\225\373: namazu [\203\111\203\166\203\126\203\207\203\2
 #: src/usage.c:92
 msgid "Try `namazu --help' for more information.\n"
 msgstr "`namazu --help' \202\305\202\346\202\350\217\332\202\265\202\242\217\356\225\361\202\252\225\134\216\246\202\263\202\352\202\334\202\267\n"
+
+#: scripts/mknmz.pl.in:104
+msgid "target file: "
+msgstr "\221\316\217\333\203\164\203\100\203\103\203\213: "
+
+#: scripts/mknmz.pl.in:146
+msgid "Reading rcfile: "
+msgstr "rc \203\164\203\100\203\103\203\213\202\314\223\307\202\335\215\236\202\335\222\206: "
+
+#: scripts/mknmz.pl.in:180
+msgid "Checkpoint reached: re-exec mknmz...\n"
+msgstr "\203\140\203\106\203\142\203\116\203\174\203\103\203\223\203\147\202\311\223\236\222\102\202\265\202\334\202\265\202\275\201\102mknmz \202\360\215\304\216\300\215\163\202\265\202\334\202\267...\n"
+
+#: scripts/mknmz.pl.in:313
+msgid "after load_document: "
+msgstr "load_document \216\300\215\163\214\343: "
+
+#: scripts/mknmz.pl.in:607
+msgid "Detected type: "
+msgstr "\214\237\217\157\202\263\202\352\202\275\203\136\203\103\203\166: "
+
+#: scripts/mknmz.pl.in:609 scripts/mknmz.pl.in:1111
+msgid "Unsupported data type "
+msgstr "\226\242\203\124\203\174\201\133\203\147\202\314\203\146\201\133\203\136\203\136\203\103\203\166 "
+
+#: scripts/mknmz.pl.in:613
+msgid "Using "
+msgstr "\210\310\211\272\202\314\203\202\203\127\203\205\201\133\203\213\202\360\216\147\227\160 "
+
+#: scripts/mknmz.pl.in:615
+msgid "unable to require "
+msgstr "\210\310\211\272\202\314\203\202\203\127\203\205\201\133\203\213\202\252 require \202\305\202\253\202\334\202\271\202\361 "
+
+#: scripts/mknmz.pl.in:623
+msgid "Faild to call "
+msgstr "\214\304\202\321\217\157\202\265\202\311\216\270\224\163 "
+
+#: scripts/mknmz.pl.in:665 scripts/mknmz.pl.in:1275
+msgid "No files to index.\n"
+msgstr "\203\103\203\223\203\146\203\142\203\116\203\130\202\267\202\327\202\253\203\164\203\100\203\103\203\213\202\315\202\240\202\350\202\334\202\271\202\361\201\102\n"
+
+#: scripts/mknmz.pl.in:685
+msgid "code conversion: using NKF module\n"
+msgstr "\203\122\201\133\203\150\225\317\212\267\202\311 NKF \203\202\203\127\203\205\201\133\203\213\202\360\227\160\202\242\202\334\202\267\201\102\n"
+
+#: scripts/mknmz.pl.in:690
+msgid "wakati: using Text::Kakasi module\n"
+msgstr "\202\355\202\251\202\277\217\221\202\253\202\311 Text::Kakasi \203\202\203\127\203\205\201\133\203\213\202\360\227\160\202\242\202\334\202\267\201\102\n"
+
+#: scripts/mknmz.pl.in:695
+msgid "wakati: using Text::ChaSen module\n"
+msgstr "\202\355\202\251\202\277\217\221\202\253\202\311 Text::ChaSen \203\202\203\127\203\205\201\133\203\213\202\360\227\160\202\242\202\334\202\267\201\102\n"
+
+#: scripts/mknmz.pl.in:709
+msgid ""
+"found. Maybe this index is being updated by another process now.\n"
+"If not, you can remove this file.\n"
+msgstr ""
+"\203\164\203\100\203\103\203\213\202\360\224\255\214\251\202\265\202\334\202\265\202\275\201\102\n"
+"\202\261\202\314\203\103\203\223\203\146\203\142\203\116\203\130\202\315\221\274\202\314\203\166\203\215\203\132\203\130\202\311\202\346\202\301\202\304\215\130\220\126\202\263\202\352\202\304\202\242\202\351\211\302\224\134\220\253\202\252\202\240\202\350\202\334\202\267\201\102\n"
+"\202\273\202\244\202\305\202\310\202\257\202\352\202\316\201\101\202\261\202\314\203\164\203\100\203\103\203\213\202\360\215\355\217\234\202\265\202\304\211\272\202\263\202\242\201\102\n"
+
+#: scripts/mknmz.pl.in:738
+msgid "Present index is old type. it's unsupported.\n"
+msgstr ""
+"\202\267\202\305\202\311\221\266\215\335\202\267\202\351\203\103\203\223\203\146\203\142\203\116\203\130\202\315\214\303\202\242\214\140\216\256\202\314\202\340\202\314\202\305\202\267\201\102\215\241\202\315\203\124\203\174\201\133\203\147\202\263\202\352\202\304\202\242\202\334\202\271\202\361\201\102"
+"\n"
+
+#: scripts/mknmz.pl.in:888
+msgid "Inherited argv: "
+msgstr "\214\160\217\263\202\263\202\352\202\275\210\370\220\224 (argv): "
+
+#: scripts/mknmz.pl.in:892
+msgid "Inherited cwd: "
+msgstr "\214\160\217\263\202\263\202\352\202\275\203\112\203\214\203\223\203\147\203\146\203\102\203\214\203\116\203\147\203\212 (cwd): "
+
+#: scripts/mknmz.pl.in:933
+msgid "Loaded: "
+msgstr "\223\307\202\335\215\236\202\335\212\256\227\271: "
+
+#: scripts/mknmz.pl.in:948
+#, fuzzy
+msgid "Invalid replace: "
+msgstr "\225\163\220\263\202\310 replace \216\167\222\350: "
+
+#: scripts/mknmz.pl.in:950
+msgid "Replace: "
+msgstr "Replace: "
+
+#: scripts/mknmz.pl.in:959
+msgid "invalid output directory\n"
+msgstr "\226\263\214\370\202\310\217\157\227\315\203\146\203\102\203\214\203\116\203\147\203\212\216\167\222\350\n"
+
+#: scripts/mknmz.pl.in:1048
+msgid " findfiles starting: "
+msgstr " findfiles \212\112\216\156: "
+
+#: scripts/mknmz.pl.in:1066
+msgid " findfiles    ended: "
+msgstr " findfiles \217\111\227\271: "
+
+#: scripts/mknmz.pl.in:1067
+#, c-format
+msgid ""
+" find_target: Scanned : (%d), Files: (%d), Elapsed: (%d), Files/sec: "
+"(%.1f).\n"
+msgstr ""
+" find_target: Scanned : (%d), Files: (%d), Elapsed: (%d), Files/sec: "
+"(%.1f).\n"
+
+#: scripts/mknmz.pl.in:1076
+msgid "lang: "
+msgstr "\214\276\214\352: "
+
+#: scripts/mknmz.pl.in:1104
+msgid "is 0 size! skipped."
+msgstr "\203\164\203\100\203\103\203\213\203\124\203\103\203\131\202\252 0 \202\310\202\314\202\305\203\130\203\114\203\142\203\166\202\265\202\334\202\267\201\102"
+
+#: scripts/mknmz.pl.in:1106
+msgid "may be a BINARY file! skipped."
+msgstr "\203\164\203\100\203\103\203\213\202\252\203\157\203\103\203\151\203\212\202\306\216\166\202\355\202\352\202\351\202\314\202\305\203\130\203\114\203\142\203\166\202\265\202\334\202\267\201\102"
+
+#: scripts/mknmz.pl.in:1108
+msgid "is too LARGE a text! skipped."
+msgstr "\203\164\203\100\203\103\203\213\202\252\213\220\221\345\202\310\202\314\202\305\203\130\203\114\203\142\203\166\202\265\202\334\202\267\201\102"
+
+#: scripts/mknmz.pl.in:1111
+msgid " skipped."
+msgstr " \203\130\203\114\203\142\203\166\202\265\202\334\202\267\201\102"
+
+#: scripts/mknmz.pl.in:1116
+#, fuzzy
+msgid "system error occurred! "
+msgstr "\222\166\226\275\223\111\202\310\203\107\203\211\201\133"
+
+#: scripts/mknmz.pl.in:1253
+msgid "wanted: "
+msgstr "wanted: "
+
+#: scripts/mknmz.pl.in:1347
+msgid ""
+"\n"
+"\n"
+"== found ==\n"
+msgstr ""
+"\n"
+"\n"
+"== found ==\n"
+
+#: scripts/mknmz.pl.in:1348
+msgid ""
+"\n"
+"\n"
+"== registered ==\n"
+msgstr ""
+"\n"
+"\n"
+"== registered ==\n"
+
+#: scripts/mknmz.pl.in:1349
+msgid ""
+"\n"
+"\n"
+"== overlapped  ==\n"
+msgstr ""
+"\n"
+"\n"
+"== overlapped  ==\n"
+
+#: scripts/mknmz.pl.in:1350
+msgid ""
+"\n"
+"\n"
+"== deleted  ==\n"
+msgstr ""
+"\n"
+"\n"
+"== deleted  ==\n"
+
+#: scripts/mknmz.pl.in:1351
+msgid ""
+"\n"
+"\n"
+"== updated ==\n"
+msgstr ""
+"\n"
+"\n"
+"== updated ==\n"
+
+#: scripts/mknmz.pl.in:1352
+msgid ""
+"\n"
+"\n"
+"== files to index ==\n"
+msgstr ""
+"\n"
+"\n"
+"== files to index ==\n"
+
+#: scripts/mknmz.pl.in:1376
+msgid "## deleted: "
+msgstr "## deleted: "
+
+#: scripts/mknmz.pl.in:1399
+msgid "## indexed: "
+msgstr "## indexed: "
+
+#: scripts/mknmz.pl.in:1425
+#, fuzzy
+msgid "update_field_index: "
+msgstr "\203\164\203\102\201\133\203\213\203\150\214\237\215\365\227\160\202\314\203\103\203\223\203\146\203\142\203\116\203\130\202\252\212\112\202\257\202\334\202\271\202\361\202\305\202\265\202\275"
+
+#: scripts/mknmz.pl.in:1445
+msgid "was updated!\n"
+msgstr "\203\164\203\100\203\103\203\213\202\315\215\130\220\126\202\263\202\352\202\304\202\242\202\334\202\267\201\102\n"
+
+#: scripts/mknmz.pl.in:1486
+msgid "ERROR: malformed NMZ.r format!\n"
+msgstr "\203\107\203\211\201\133: NMZ.r \202\252\226\263\214\370\202\310\214\140\216\256\202\305\202\267\201\102\n"
+
+#: scripts/mknmz.pl.in:1694
+msgid "doing write_phrase_hash() processing.\n"
+msgstr "write_phrase_hash() \216\300\215\163.\n"
+
+#: scripts/mknmz.pl.in:1921
+msgid "doing write_index() processing.\n"
+msgstr "write_index() \216\300\215\163.\n"
+
+#: pl/util.pl:52
+#, fuzzy
+msgid "Renamed: "
+msgstr "Renamed: "
+
+#: pl/util.pl:128 pl/util.pl:153
+msgid "not an IO::File/FileHandle object!\n"
+msgstr "IO::File/FileHandle \203\111\203\165\203\127\203\106\203\116\203\147\202\305\202\315\202\240\202\350\202\334\202\271\202\361\201\102\n"
+
+#: pl/util.pl:218
+msgid "Remove tmporary files:"
+msgstr "\210\352\216\236\203\164\203\100\203\103\203\213\202\360\215\355\217\234:"
+
+#: pl/util.pl:236
+msgid "ASSERTION ERROR!: "
+msgstr "ASSERTION ERROR!: "
+
+#: pl/wakati.pl:59
+msgid "-- wakatized content --\n"
+msgstr "-- wakatized content --\n"
+
+#: pl/wakati.pl:74
+msgid "invalid wakati module: "
+msgstr "\226\263\214\370\202\310\202\355\202\251\202\277\217\221\202\253\203\202\203\127\203\205\201\133\203\213: "
+
+#: pl/wakati.pl:76
+msgid "-- wakatized bare content --\n"
+msgstr "-- wakatized bare content --\n"
+
+#: pl/wakati.pl:80
+msgid "wakati: using "
+msgstr "wakati: \210\310\211\272\202\360\227\230\227\160 "
+
+#: pl/find.pl:42
+msgid "Can't stat "
+msgstr ""
+
+#: pl/find.pl:53
+#, fuzzy
+msgid "Can't cd to "
+msgstr "\210\310\211\272\202\314\203\146\203\102\203\214\203\116\203\147\203\212\202\311\210\332\223\256\202\305\202\253\202\334\202\271\202\361 "
+
+#: pl/find.pl:87
+msgid "is exclude because of .htaccess\n"
+msgstr " \202\315 .htaccess \202\311\202\346\202\301\202\304\217\234\212\117\202\263\202\352\202\334\202\267\201\102\n"
+
+#: pl/find.pl:95
+msgid "Can't open "
+msgstr "\210\310\211\272\202\314\203\164\203\100\203\103\203\213\202\252\203\111\201\133\203\166\203\223\202\305\202\253\202\334\202\271\202\361: "
+
+#: pl/find.pl:128
+msgid "Looped symbolic link detected "
+msgstr "\217\172\212\302\202\265\202\304\202\242\202\351\203\126\203\223\203\173\203\212\203\142\203\116\203\212\203\223\203\116\202\360\224\255\214\251 "
+
+#: pl/find.pl:128
+#, fuzzy
+msgid " skipped.\n"
+msgstr " \203\130\203\114\203\142\203\166\202\265\202\334\202\267\201\102"
 
 #~ msgid ""
 #~ "\t<h2>Error!</h2>\n"
