--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2000-01-17  Ryuji Abe  <raeva@t3.rim.or.jp>
+
+	* make_sjis_po: Removed.
+
 2000-01-14  NOKUBI Takatsugu  <knok@daionet.gr.jp>
 
 	* ja.po: Added new translations.
