--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2000-01-18  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* nmz/search.c (nmz_search): Fix a serious bug. [namazu-dev 1233]
+
+	* src/namazu.c (namazu_core): Change a little.
+
 2000-01-16  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
 	* scripts/mknmz.pl.in (write_message): Do not convert character
