--- a/po/ja.po
+++ b/po/ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: namazu 2.0\n"
-"POT-Creation-Date: 2000-01-19 09:20+0900\n"
+"POT-Creation-Date: 2000-01-19 17:33+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>\n"
 "Language-Team: Japanese <satoru-t@is.aist-nara.ac.jp>\n"
@@ -169,7 +169,7 @@ msgid ""
 "    -H, --page           print further result links. (nearly meaningless)\n"
 "    -F, --form           force to print <form> ... </form> region.\n"
 "    -R, --no-replace     do not replace URI string.\n"
-"    -U, --no-encode-uri  do not decode URI when printing in a plain format.\n"
+"    -U, --no-decode-uri  do not decode URI when printing in a plain format.\n"
 "    -o, --output=file    set output file name.\n"
 "    -f, --config=file    set a pathname of a config file.\n"
 "    -C, --show-config    print current configuration.\n"
@@ -200,7 +200,7 @@ msgstr ""
 "    -H, --page              先の検索結果へのリンクを表示する (ほぼ無意味) \n"
 "    -F, --form              <form> ... </form> の部分を強制的に表示する\n"
 "    -R, --no-replace        URI の置き換えを行わない\n"
-"    -U, --no-encode-uri     URI encode の復元を行わない\n"
+"    -U, --no-decode-uri     URI encode の復元を行わない\n"
 "    -o, --output=file       指定したファイルに検索結果を出力する\n"
 "    -f, --config=file       namazu.conf を指定する\n"
 "    -C, --show-config       設定を表示する\n"
