--- a/po/namazu.pot
+++ b/po/namazu.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2000-01-19 09:20+0900\n"
+"POT-Creation-Date: 2000-01-19 17:33+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -160,7 +160,7 @@ msgid ""
 "    -H, --page           print further result links. (nearly meaningless)\n"
 "    -F, --form           force to print <form> ... </form> region.\n"
 "    -R, --no-replace     do not replace URI string.\n"
-"    -U, --no-encode-uri  do not decode URI when printing in a plain format.\n"
+"    -U, --no-decode-uri  do not decode URI when printing in a plain format.\n"
 "    -o, --output=file    set output file name.\n"
 "    -f, --config=file    set a pathname of a config file.\n"
 "    -C, --show-config    print current configuration.\n"
