--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2000-01-20  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* POTFILES.in: nmz/rcfile.c -> src/rcfile.c
+
 2000-01-17  Ryuji Abe  <raeva@t3.rim.or.jp>
 
 	* make_sjis_po: Removed.
