--- a/po/namazu.pot
+++ b/po/namazu.pot
@@ -6,28 +6,13 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2000-01-19 17:49+0900\n"
+"POT-Creation-Date: 2000-01-20 10:55+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: ENCODING\n"
-
-#: nmz/rcfile.c:580
-#, c-format
-msgid "Config:  %s\n"
-msgstr ""
-
-#: nmz/rcfile.c:583
-#, c-format
-msgid ""
-"Default: %s\n"
-"BASE:    %s\n"
-"Logging: %s\n"
-"Lang:    %s\n"
-"Scoring: %s\n"
-msgstr ""
 
 #: nmz/util.c:559
 msgid "Fatal error occered!"
@@ -136,6 +121,21 @@ msgstr ""
 
 #: src/output.c:697
 msgid "\t<p>No document matching your query.</p>\n"
+msgstr ""
+
+#: src/rcfile.c:580
+#, c-format
+msgid "Config:  %s\n"
+msgstr ""
+
+#: src/rcfile.c:583
+#, c-format
+msgid ""
+"Default: %s\n"
+"BASE:    %s\n"
+"Logging: %s\n"
+"Lang:    %s\n"
+"Scoring: %s\n"
 msgstr ""
 
 #: src/usage.c:52
