--- a/po/namazu.pot
+++ b/po/namazu.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2000-01-20 20:37+0900\n"
+"POT-Creation-Date: 2000-01-23 21:10+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -131,8 +131,8 @@ msgstr ""
 #: src/rcfile.c:583
 #, c-format
 msgid ""
-"Default: %s\n"
-"BASE:    %s\n"
+"Index:   %s\n"
+"Base:    %s\n"
 "Logging: %s\n"
 "Lang:    %s\n"
 "Scoring: %s\n"
