* src/rcfile.c (process_rc_lang): Call nmz_set_lang() in anytime 	for workaround. (temporary change)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
 2000-01-26  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
-  	* configure.in (AM_INIT_AUTOMAKE): Bumped version number to 1.9.14.
-  
   	* Namazu: Version 1.9.13 released.
+
+	* src/rcfile.c (process_rc_lang): Call nmz_set_lang() in anytime
+	for workaround. (temporary change)
 
 	* src/namazu.c (main): Fix a security hole in CGI mode which
 	allows malicious person to put a garbage file on a Web server's
