--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2000-01-27  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
+
+	* src/namazu.c (main): Change position of calling nmz_set_lang()
+	and load_rcfile().
+
+  	* configure.in (AM_INIT_AUTOMAKE): Bumped version number to 1.9.14.
+
 2000-01-26  Satoru Takabayashi  <satoru-t@is.aist-nara.ac.jp>
 
   	* Namazu: Version 1.9.13 released.
